[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.1"
reformation = "0.5.3"
tap = "1.0.1"
bitvec = "0.22.3"
maplit = "1.0.2"
dashmap = "3.11.10"
ndarray = "0.15.4"
genawaiter = "0.99.1"